[tool.poetry]
name = "backend_boilerplate"
version = "0.1.0"
description = "Boilerplate for python web apps"
authors = ["Stepan Artov <stepanartov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^23.1.0"
pydantic = {extras = ["email"], version = "^2.3"}
arrow = "^1.2.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
isort = "^5.11.4"
black = "^23.3.0"
pytest = "^7.4.0"
flake8 = "^6.1.0"
flake8-builtins = "^2.1.0"
flake8-bugbear = "^23.7.10"
flake8-coding = "^1.3.2"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-eradicate = "^1.5.0"
flake8-quotes = "^3.3.2"
pytest-asyncio = "^0.21.0"
testcontainers = {version = "^3.7.1", extras = ["postgresql"]}
faker = "^19.3.1"
pytest-mock = "^3.12.0"
python-dotenv = "^1.0.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
asyncio_mode = 'auto'
filterwarnings = ['ignore::DeprecationWarning']

[tool.black]
line-length = 100
target-version = ['py310']
skip-string-normalization = true
skip-magic-trailing-comma = true
exclude = 'migrations'

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
ensure_newline_before_comments = true
use_parentheses = true
skip_gitignore = true
skip = ['migrations']

[tool.mypy]
exclude = ['tests', 'migrations']
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ['tests.*', 'migrations.*']
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
