[tool.poetry]
name = "pybackbone"
version = "0.2"
description = "Boilerplate for python web apps"
authors = ["Stepan Artov <stepanartov@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^24.1.0"
pydantic = { extras = ["email"], version = "^2.6" }
arrow = "^1.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.6"
faker = "^24.4.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
ruff = "^0.3.4"
bandit = "^1.7.8"

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.ruff]
line-length = 120
lint.ignore = ["D", "ANN101", "ANN102", "ANN401", "B008", "CPY", "FIX"]
lint.fixable = ["ALL"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
