[tool.poetry]
name = "pybackbone"
version = "0.2"
description = "Boilerplate for python web apps"
authors = ["Stepan Artov <stepanartov@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^24.1.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
arrow = "^1.3.0"
uuid6 = "^2024.1.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
typer = "^0.12.0"
pydantic-settings = "^2.2.1"
psycopg = {version = "^3.1.18", extras = ["binary", "pool"]}
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy-utils = "^0.41.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.6"
faker = "^25.9.1"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
ruff = "^0.3.4"
bandit = "^1.7.8"
ipdb = "^0.13.13"
ipykernel = "^6.29.4"
polyfactory = "^2.15.0"

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.ruff]
line-length = 120
lint.ignore = ["D", "ANN101", "ANN102", "ANN401", "B008", "CPY", "FIX"]
lint.fixable = ["ALL"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "sqlalchemy_utils.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
